# TP_Project

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  Test  Test.txt  main.out  program
.run/: Unnamed.run.xml
project/: CMakeLists.txt  Makefile  main.cpp
project/ARCHIVE/: ParserUserGroupImpl.cpp
project/BUF/: JSON.cpp
project/BUF/impl/: JSON.hpp
project/BUF/virtual/: Parsing.hpp
project/base_architecture/include/impl/: AsyncFileIOStream.hpp  AsyncFileInputStream.hpp  AsyncFileOutputStream.hpp  FileImpl.hpp  HttpClientAcceptor.hpp  HttpClientAcceptorCustom.hpp  ListeningNetworkSocket.hpp  SelectBasedEventLoop.hpp  Utils.hpp
project/base_architecture/include/virtual/: AsyncStream.hpp  ClientAcceptor.hpp  ListeningSocket.hpp
project/base_architecture/src/: AsyncFileInputStream.cpp  AsyncFileOutputStream.cpp  HttpClientAcceptor.cpp  HttpClientAcceptorCustom.cpp  ListeningNetworkSocket.cpp  SelectBasedEventLoop.cpp  main.cpp
project/database_connector/PostgreSQL/include/impl/: DataBaseConnectorImpl.hpp  PGConnection.hpp
project/database_connector/PostgreSQL/src/: Address.cpp  Contact.cpp  Event.cpp  GetID.cpp  GetId.cpp  GroupManagement.cpp  PGConnection.cpp  Personal.cpp  RegAuth.cpp  SynchronizationClient.cpp
project/database_connector/PostgreSQL/src/Data/: Address.cpp  General.cpp  Personal.cpp  Security.cpp
project/database_connector/PostgreSQL/src/Group/: Base.cpp  Management.cpp
project/database_connector/SQL/: pool.sql
project/database_connector/SQl/: pool  pool.sql
project/database_connector/include/impl/: DataBaseConnectorImpl.hpp  pgbackend.hpp  pgconnection.hpp
project/database_connector/include/libs/postgresql/: libpq-events.h  libpq-fe.h  pg_config.h  pg_config_ext.h  pg_config_manual.h
project/database_connector/libs/PostgreSQL/: libpq-fe.h  pg_config.h  pg_config_manual.h  pg_config_os.h  postgres_ext.h
project/database_connector/libs/PostgreSQL/internal/: libpq-int.h  port.h
project/database_connector/src_postge_sql/: pgconnection.cpp
project/function/registration/include/: myfunction.hpp
project/function/registration/src/: myfunction.cpp
project/include/: MeetUp.hpp  README.md  config.hpp  date.h  day.h  day.hpp  duration.h  event.h  event.hpp  group.h  my_struct.h  struct.h  time.h  user.h
project/include/include _parse_json/: json.h
project/include/include_business/: MeetUp.hpp  date.h  day.h  day.hpp  duration.h  duration.hpp  event.h  event.hpp  function.hpp  group.h  structs.hpp  user.h
project/parser/include/: ParserObject.hpp  parse_json.hpp  struct.hpp
project/parser/include/impl/: ParserContactsImpl.hpp  ParserEventImpl.hpp  ParserGroupImpl.hpp  ParserObject.hpp  ParserRegistrAuthImpl.hpp  ParserSynchroClientImpl.hpp  ParserWriteAddressDataImpl.hpp  ParserWritePersonalDataImpl.hpp  TestInputData.hpp
project/parser/include/virtual/: Parsing.hpp
project/parser/src/methods/: create_group.cpp  friend.cpp  reg_and_au.cpp  shedule.cpp
project/parser/src/single/: contacts.cpp
project/parser/src_json/: ParserContactsImpl.cpp
project/parser/src_json/single/: addres.cpp  group.cpp
project/parser_class/JSON/src/: ParserContactsImpl.cpp  ParserEventImpl.cpp  ParserGetFreeTime.cpp  ParserGroupImpl.cpp  ParserRegistrAuthImpl.cpp  ParserWriteAddressDataImpl.cpp  ParserWriteGeneralDataImpl.cpp  ParserWritePersonalDataImpl.cpp
project/parser_class/JSON/src_json/: ParserGroupImpl.cpp  ParserWritePersonalDataImpl.cpp
project/parser_class/include/: parse_json.hpp
project/parser_class/include/impl/: ParserContactsImpl.hpp  ParserEventImpl.hpp  ParserGroupImpl.hpp  ParserMeetUpImpl.hpp  ParserRegistrAuthImpl.hpp  ParserSynchroClientImpl.hpp  ParserWriteAddressDataImpl.hpp  ParserWriteGeneralDataImpl.hpp  ParserWritePersonalDataImpl.hpp
project/parser_class/include/virtual/: Parser.hpp
project/parser_class/src_json/: ParserContactsImpl.cpp  ParserEventImpl.cpp  ParserGroupImpl.cpp  ParserRegistrAuthImpl.cpp  ParserSynchroClientImpl.cpp  ParserWriteAddressDataImpl.cpp  ParserWritePersonalDataImpl.cpp
project/parser_class/src_json/single/: event.cpp
project/parser_class/virtual/: Parser.hpp
project/parser_object/: ParserObject.hpp
project/parser_object/include/: ParserObject.hpp  Structs.hpp
project/parser_object/src/: Debugging.cpp  ParserObject .cpp  ParserObject.cpp  StructFunctional.cpp  Structs.cpp
project/processing_class/include/impl/: ContactsImpl.hpp  EventImpl.hpp  GroupImpl.hpp  MeetUp.hpp  MeetUpImpl.hpp  RegistrAuthImpl.hpp  SynchroClientImpl.hpp  VectorHandler.hpp  VectorHandlerImpl.hpp  WriteAddressDataImpl.hpp  WriteGeneralDataImpl.hpp  WritePersonalDataImpl.hpp
project/processing_class/include/virtual/: Contacts.hpp  Event.hpp  Group.hpp  Handler.hpp  RegistrAuth.hpp  SynchroClient.hpp  VectorHandler.hpp  WriteAddressData.hpp  WritePersonalData.hpp
project/processing_class/src/: ContactsImpl.cpp  EventImpl.cpp  GroupImpl.cpp  RegistrAuthImpl.cpp  SupportProcess.cpp  SynchroClientImpl.cpp  VectorHandlerImpl.cpp  WriteAddreesDataImpl.cpp  WriteAddressDataImpl.cpp  WriteGeneralDataImpl.cpp  WritePersonalDataImpl.cpp
project/processing_class/src/Data/: WriteAddressDataImpl.cpp  WriteGeneralDataImpl.cpp  WritePersonalDataImpl.cpp  WriteSecurityDataImpl.cpp
project/processing_class/src/Support/: SupportProcess.cpp
project/route/include/impl/: RouteImpl.hpp  RouteMapKeys.hpp  VectorRequestImpl.hpp
project/route/include/virtual/: LinkRequestHandler.hpp  Route.hpp  VectorRequest.hpp
project/route/src/: LinkRequestHandlerImpl.cpp  RouteImpl.cpp  VectorRequestImpl.cpp
project/src/: MeetUp.cpp  date.cpp  day.cpp  duration.cpp  event.cpp  group.cpp  main.c  main.cpp  my_class.cpp  my_json_parse.cpp  new_date.cpp  structs.cpp  time.cpp
project/src/business/: MeetUp.cpp  date.cpp  day.cpp  duration  duration.cpp  encryption.cpp  event.cpp  function.cpp  group.cpp  structs.cpp
project/src/parse_json/: README.md  json.cpp
project/z_first_impl/include/impl/: RequestHandlerLink.hpp  RouteCollection.hpp
project/z_first_impl/include/virtual/: Route.hpp
(+107 files in other folders)
